@@ -1,7 +1,7 @@
-#,,,"generated_by='OpenQuake engine 3.17.0-gitfb2ee31615', start_date='2023-04-24T10:01:51', checksum=1764635623, risk_investigation_time=1.0, num_events=28, effective_time=1000.0, limit_states=''"
+#,,,"generated_by='OpenQuake engine 3.17.0-git5aeb93ee31', start_date='2023-04-24T14:45:17', checksum=1764635623, risk_investigation_time=1.0, num_events=28, effective_time=1000.0, limit_states=''"
 return_period,loss_type,loss_value,loss_ratio
-50,structural,1.08748E+03,1.55354E-02
-100,structural,2.54413E+03,3.63448E-02
-200,structural,3.35103E+03,4.78718E-02
-500,structural,5.85788E+03,8.36839E-02
-1000,structural,8.87481E+03,1.26783E-01
+50,structural,1.05571E+03,1.50815E-02
+100,structural,2.24738E+03,3.21054E-02
+200,structural,3.48046E+03,4.97208E-02
+500,structural,3.99100E+03,5.70144E-02
+1000,structural,5.83123E+03,8.33033E-02
