@@ -4,26 +4,26 @@ event_id
 1          924.108704  0.060944
 2          981.124023  0.077623
 3          313.068115  0.030247
-5         2800.182129  0.164195
+5         1627.764526  0.109724
 6         1029.661987  0.074278
 7          927.965820  0.088724
-8         1087.478271  0.112936
-9         2490.349365  0.117849
+8         1055.706909  0.109001
+9         2677.070801  0.128296
 10        1054.348267  0.099342
 11        1730.318848  0.069375
 12        2214.385254  0.087231
-13        3351.026855  0.151186
-14        4245.262695  0.241576
-15        2544.134521  0.162173
+13        2045.926514  0.089958
+14        2321.255127  0.139920
+15        2247.381348  0.134408
 16        1559.473022  0.084131
 17         886.620972  0.085350
-18        2308.697998  0.099140
+18        1780.710083  0.071839
 19        1140.468262  0.050109
-20        3366.093262  0.151103
-21        3003.140625  0.209466
-22        8874.812500  0.284962
+20        3664.391113  0.163156
+21        2458.509033  0.164133
+22        3991.004639  0.165488
 23        1161.044678  0.095060
-24        5857.875488  0.179595
-25        3297.315918  0.193528
-26        2103.592529  0.148184
-27        2719.665771  0.139356
+24        5831.230469  0.178900
+25        3247.762939  0.190136
+26        3551.375000  0.224509
+27        3480.457031  0.206546
