@@ -31,6 +31,7 @@ structural_vulnerability_file = vulnerability_model.xml
 
 [calculation]
 intensity_measure_types = PGA
+extreme_gmv = .2
 truncation_level = 3
 maximum_distance = 200.0
 investigation_time = 1
